Fix Bug 1126320 - Inline code tag visibility

--- a/media/stylus/base/elements/typography.styl
+++ b/media/stylus/base/elements/typography.styl
@@ -157,7 +157,6 @@ pre/code/kbd
 
 code {
     font-family: $code-inline-font-family;
-    font-weight: bold;
 }
 
 /* pre is a block element so it gets a bit more fancy styling */
